# JamBoard

./: .gitignore  README.md  calculations.py  calibration.pkl  detect_attrs.py  fuck.py  pyproject.toml  sound_main.py  tempCodeRunnerFile.py
detection/: calculations.py  constants.py  fuck.py  hands.py  main.py  pairs.py  shape_utils.py  sound_main.py  tapping.py  types.py  utils.py
