[tool.poetry]
name = "melodoodle"
version = "0.1.0"
description = ""
authors = ["Jason Cameron <git@jasoncameron.dev>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.1"
mediapipe = "^0.10.14"
librosa = "^0.10.2.post1"
pygame = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
